feat: 미션 6 심화 mapper MapStruct로 변경